opam-version: "1.2"
synopsis: "Elm-inspired decoders for Ocaml"
maintainer: "Matt Bray <mattjbray@gmail.com>"
authors: ["Matt Bray <mattjbray@gmail.com>"]
homepage: "https://github.com/mattjbray/ocaml-decoders"
doc: "https://mattjbray.github.io/ocaml-decoders/decoders-cbor"
bug-reports: "https://github.com/mattjbray/ocaml-decoders/issues"
license: "ISC"
dev-repo: "git@github.com:mattjbray/ocaml-decoders.git"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "ounit" {with-test}
  "decoders"
  "cbor"
]
