opam-version: "1.2"
synopsis: "Elm-inspired decoders for Ocaml"
maintainer: "Matt Bray <matt@aestheticintegration.com>"
authors: ["Matt Bray <matt@aestheticintegration.com>"]
homepage: "https://github.com/mattjbray/ocaml-decoders"
doc: "https://mattjbray.github.io/ocaml-decoders/decoders-ezjsonm"
bug-reports: "https://github.com/mattjbray/ocaml-decoders/issues"
license: "ISC"
dev-repo: "git@github.com:mattjbray/ocaml-decoders.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "ounit" {with-test}
  "decoders"
  "ezjsonm" {>= "0.4.0"}
]
