opam-version: "2.0"
maintainer: "Matt Bray <mattjbray@gmail.com>"
authors: ["Matt Bray <mattjbray@gmail.com>" "Simon Cruanes <simon@imandra.ai>"]
synopsis: "Msgpack interface for decoders"
homepage: "https://github.com/mattjbray/ocaml-decoders"
doc: "https://mattjbray.github.io/ocaml-decoders/decoders-msgpck"
bug-reports: "https://github.com/mattjbray/ocaml-decoders/issues"
license: "ISC"
dev-repo: "git+https://github.com/mattjbray/ocaml-decoders.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {>= "1.0"}
  "ounit" {with-test}
  "containers" {with-test}
  "decoders"
  "msgpck"
  "odoc" {with-doc}
  "ocaml" { >= "4.03.0" }
]
