opam-version: "1.2"
name: "decoders-ocyaml"
synopsis: "Elm-inspired decoders for Ocaml"
maintainer: "Matt Bray <matt@aestheticintegration.com>"
authors: ["Matt Bray <matt@aestheticintegration.com>"]
homepage: "https://github.com/mattjbray/ocaml-decoders"
doc: "https://mattjbray.github.io/ocaml-decoders/decoders-ocyaml"
bug-reports: "https://github.com/mattjbray/ocaml-decoders/issues"
license: "ISC"
dev-repo: "git@github.com:mattjbray/ocaml-decoders.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "containers"
  "decoders"
  "ocyaml"
]
