opam-version: "2.0"
maintainer: "Matt Bray <matt@aestheticintegration.com>"
synopsis: "YAML interface for ocaml-decoders"
authors: ["Matt Bray <matt@aestheticintegration.com>"]
homepage: "https://github.com/mattjbray/ocaml-decoders"
doc: "https://mattjbray.github.io/ocaml-decoders/decoders-ocyaml"
bug-reports: "https://github.com/mattjbray/ocaml-decoders/issues"
license: "ISC"
dev-repo: "git+https://github.com/mattjbray/ocaml-decoders.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {build}
  "containers"
  "decoders"
  "ocyaml"
  "odoc" {with-doc}
  "ocaml" { >= "4.03.0" }
]
