opam-version: "1.2"
name: "decoders-yojson"
version: "0.0.1"
maintainer: "Matt Bray <matt@aestheticintegration.com>"
authors: ["Matt Bray <matt@aestheticintegration.com>"]
homepage: "https://github.com/mattjbray/ocaml-decoders"
doc: "https://mattjbray.github.io/ocaml-decoders/decoders-yojson"
bug-reports: "https://github.com/mattjbray/ocaml-decoders/issues"
license: "LICENSE.md"
dev-repo: "git@github.com:mattjbray/ocaml-decoders.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "ounit" {test}
  "decoders"
  "yojson"
]
