(lang dune 3.8)

(using melange 0.1)
(generate_opam_files true)

(package
 (name melange-decoders)
 (synopsis "Melange backend for decoders")
 (description
   "A combinator library for \"decoding\" JSON-like values into your own Ocaml types, inspired by Elm's `Json.Decode` and `Json.Encode`.")
 (depends
  (ocaml (>= 4.03.0))
  (odoc :with-doc)
  (melange-jest :with-test)))
